fix min-width on mobile

--- a/assets/src/editor/events/dates-and-times/editor-date/grid-view/editor-dates-grid-view.css
+++ b/assets/src/editor/events/dates-and-times/editor-date/grid-view/editor-dates-grid-view.css
@@ -208,6 +208,7 @@
     }
 
     .ee-editor-date-details-wrapper-div {
+        min-width: unset;
         padding: 10px 42px 15px 10px;
     }
 
